--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_gradient"
+    android:background="@drawable/background_gradient315"
     tools:context=".views.fragments.MainFragment">
 
     <TextView
@@ -17,6 +17,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/light"
         android:textSize="36dp"
-        android:text="MainFragment" />
+        android:text="ChartFragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
