--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_gradient"
+    android:background="@drawable/settings_background_gradient"
     tools:context=".views.fragments.MainFragment">
 
     <TextView
@@ -15,8 +15,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/light"
+        android:textColor="@color/lightAccent"
         android:textSize="36dp"
-        android:text="MainFragment" />
+        android:text="SettingsFragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
