--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -11,7 +11,7 @@
         android:title="@string/menu_text_favorites"
         app:showAsAction="withText"/>
     <item
-        android:id="@+id/watch_later"
+        android:id="@+id/info"
         android:icon="@drawable/icon_info"
         android:title="@string/menu_text_info"
         app:showAsAction="withText"/>
@@ -20,9 +20,5 @@
         android:icon="@drawable/icon_chart"
         android:title="@string/menu_text_chart"
         app:showAsAction="withText"/>
-    <item
-        android:id="@+id/settings"
-        android:icon="@drawable/icon_settings"
-        android:title="@string/menu_text_settings"
-        app:showAsAction="withText"/>
+
 </menu>
