Retrofit APIs 1. Besides Binance 2 more Retrofit modules added: CoinMarketCap and CoinPaprika. Both provide main info about crypto coins and contracts. CMC API requires API key, CoinPaprika free API works without a key. Both are now in free mode and have limited functionality. 2. Main fragment now shows a list of 10 gainers and losers for the last 24 hours (from CoinPaprika API). Gainers have dark green background, losers - dark red. 3. Clicking on a coin in the list a detailed info about the coin is opened (InfoFragment).

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -9,14 +9,15 @@
     tools:context=".views.fragments.MainFragment">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/light"
-        android:textSize="36dp"
+        android:textColor="@color/white"
+        android:textSize="24dp"
         android:text="FavoritesFragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
