--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,15 +9,31 @@
     tools:context=".views.fragments.MainFragment">
 
     <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:id="@+id/main_header"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/light"
-        android:textSize="36dp"
-        android:text="MainFragment" />
+        android:text="Top gainers and losers"
+        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:paddingTop="12dp"
+        android:paddingBottom="0dp"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layoutAnimation="@anim/popping_layout_anim"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_header"
+        tools:listitem="@layout/main_coin_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
