--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,16 @@
     <style name="Base.Theme.CryptoView" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
+    </style>
+    
+    <style name="TextViewStyle" parent="android:Widget.TextView">
+        <item name="fontFamily">sans-serif-light</item>
+        <item name="android:textSize">14sp</item>
+        <item name="color">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:layout_marginBottom">0dp</item>
     </style>
 
     <style name="Theme.CryptoView" parent="Base.Theme.CryptoView" />
