--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,25 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_gradient"
+    android:layout_marginBottom="0dp"
+    android:background="@drawable/background_gradient45"
     tools:context=".views.MainActivity">
-
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:id="@+id/app_bar_layout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-
-<!--        <com.google.android.material.appbar.MaterialToolbar-->
-<!--            android:id="@+id/top_app_bar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            app:title="@string/page_title"-->
-<!--            app:menu="@menu/menu_toolbar"-->
-<!--            android:background="@color/dark"-->
-<!--            style="@style/Widget.MaterialComponents.Toolbar.Primary" />-->
-
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
     <FrameLayout
         android:id="@+id/fragment_placeholder"
@@ -35,12 +19,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@color/dark"
-        app:itemTextColor="@android:color/white"
+        app:itemTextColor="@color/white"
         app:itemIconTint="@drawable/navigation_view_colored"
-        app:labelVisibilityMode="selected"
+        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:fitsSystemWindows="true"
+        android:layout_margin="0dp"
         app:menu="@menu/menu_navigation" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
