Room DB 1. Added Room db in a separate module. 2. At app start all the Binance symbols are loaded from api and saved to local db.
!!! To implement: Compare status with saved symbols and show changes to the user.

3. Added SharedPreferences to Domain dagger module. Atm the last time top movers were requested from API is saved there.
4. Top movers are saved to the local db. Next time they're shown from db. Next api call is made only in 10 min.

--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -65,9 +65,10 @@
     </LinearLayout>
 
     <com.highsoft.highcharts.core.HIChartView
-        android:id="@+id/plot"
+        android:id="@+id/chart_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/price_stat" />
 
