Room DB 1. Added Room db in a separate module. 2. At app start all the Binance symbols are loaded from api and saved to local db.
!!! To implement: Compare status with saved symbols and show changes to the user.

3. Added SharedPreferences to Domain dagger module. Atm the last time top movers were requested from API is saved there.
4. Top movers are saved to the local db. Next time they're shown from db. Next api call is made only in 10 min.
5. Added SearchFragment. Now it only shows the coins sorted by daily volume (tickers).
6. The last time tickers were requested from the remote API is saved to SharedPreferences.
7. If less than 1 min has passed since the last API call the tickers are read from the local db.

--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -3,9 +3,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/home"
+        android:enabled="true"
+        android:icon="@drawable/icon_up_down"
+        app:showAsAction="always"
+        android:title="@string/menu_text_home"/>
+    <item
+        android:id="@+id/favorites"
+        android:enabled="true"
+        android:icon="@drawable/icon_favorite"
+        app:showAsAction="always"
+        android:title="@string/menu_text_favorites"/>
+    <item
+        android:id="@+id/search"
+        android:enabled="true"
+        android:icon="@drawable/icon_search"
+        app:showAsAction="always"
+        android:title="@string/menu_text_search"/>
+    <item
         android:id="@+id/settings"
-        android:title="@string/menu_text_settings"
+        android:enabled="true"
         android:icon="@drawable/icon_settings"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"
+        android:title="@string/menu_text_settings"/>
 
 </menu>
