--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,22 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:layout_margin="0dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/top_app_bar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="@string/page_title"
-            app:navigationIcon="@drawable/icon_menu"
+            android:elevation="10dp"
+            android:layout_height="48dp"
+            android:padding="0dp"
+            app:title="@string/app_name"
+            app:titleTextColor="@color/white"
+            app:titleMargin="0dp"
+            android:layout_margin="0dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             app:menu="@menu/menu_toolbar"
             android:background="@color/dark"
             style="@style/Widget.MaterialComponents.Toolbar.Primary" />
@@ -31,24 +39,7 @@
         android:id="@+id/fragment_placeholder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-
-        android:layout_alignParentBottom="true"
-        app:itemHorizontalTranslationEnabled="false"
-        android:layout_margin="0dp"
-        android:layout_gravity="bottom"
-        android:background="@color/dark"
-        android:fitsSystemWindows="true"
-        app:itemIconTint="@drawable/navigation_view_colored"
-        app:itemTextColor="@color/white"
-        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu_navigation" />
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
