--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -74,12 +74,40 @@
                 android:background="@color/white"
                 app:layout_constraintTop_toBottomOf="@+id/description" />
 
+                <TextView
+                    android:id="@+id/info_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:gravity="start"
+                    android:text="@string/main_info"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/description"/>
+
+                <LinearLayout
+                    android:id="@+id/info_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@+id/info_title" >
+
+                </LinearLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginTop="12dp"
+                android:background="@color/white"
+                app:layout_constraintTop_toBottomOf="@+id/info_list" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/tags_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/description" >
+                app:layout_constraintTop_toBottomOf="@+id/info_list" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -89,15 +117,16 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:id="@+id/tags"
+                <LinearLayout
+                    android:id="@+id/tag_list"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:maxWidth="200dp"
-                    android:autoLink="web"
-                    android:textAlignment="viewEnd"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent" >
+
+                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -115,7 +144,6 @@
                 android:layout_marginTop="24dp"
                 android:gravity="start"
                 android:text="@string/links"
-                android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/tags_container" />
 
@@ -144,12 +172,14 @@
                 android:layout_marginTop="24dp"
                 android:text="@string/team"
                 android:textColor="@color/white"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/urls" />
 
             <LinearLayout
                 android:id="@+id/team"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@+id/team_title"
                 android:orientation="vertical">
 
