--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
     
     <style name="TextViewStyle" parent="android:Widget.TextView">
         <item name="fontFamily">@font/roboto</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="color">@color/white</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorLink">@color/white</item>
@@ -16,4 +16,9 @@
     </style>
 
     <style name="Theme.CryptoView" parent="Base.Theme.CryptoView" />
+
+    <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@color/medium</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
