FavoritesFragment 1. Added FavoriteCoin table to room db 2. Added layout to show favorite coins in FavoritesFragment. 3. On Info Fragment added Favorite fab to add/delete coin to favorites. 4. Added RecentCoin table to db to automatically save all the visited coins. 5. RecentFragment added to the same ViewPager2 as FavoritesFragment. 6. Recently viewed coins are sorted by the last visit time. 7. RecentCoin and FavoriteCoin implement SavedCoin interface to reuse the same RV adapter and ViewHolder. 8. Headers of FavoritesFragment and RecentFragment are shared (implemented in a separate layout).

--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient315"
     android:padding="12dp"
-    tools:context=".views.fragments.MainFragment">
+    tools:context=".views.fragments.ChartFragment">
 
     <LinearLayout
         android:id="@+id/price_stat"
