--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,9 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient45"
-    tools:context=".views.fragments.MainFragment">
-
-
+    tools:context=".views.fragments.SearchFragment">
 
         <LinearLayout
             android:id="@+id/rv_headers"
