--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/settings_background_gradient"
-    tools:context=".views.fragments.MainFragment">
+    tools:context=".views.fragments.SettingsFragment">
 
     <TextView
         android:id="@+id/text"
