--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.CryptoView" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:alertDialogStyle">@style/DialogStyle</item>
     </style>
 
     <style name="TextViewStyle" parent="android:Widget.TextView">
@@ -15,7 +16,7 @@
         <item name="android:layout_marginBottom">0dp</item>
     </style>
 
-    <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="DialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:background">@color/medium</item>
         <item name="android:textColor">@color/white</item>
         <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
@@ -23,10 +24,12 @@
     </style>
 
     <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="backgroundTint">@color/dark</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="backgroundTint">@color/dark</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
