Ai chat added. !!! TODO: UI

--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ap="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient315"
-    android:padding="12dp"
+    android:padding="@dimen/medium_padding"
     tools:context=".views.fragments.ChartFragment">
 
     <LinearLayout
@@ -64,12 +63,97 @@
 
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/interval_selector"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/small_padding"
+        android:layout_marginTop="@dimen/medium_padding"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toBottomOf="@+id/price_stat" >
+
+
+        <TextView
+            android:id="@+id/d7"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="1w"
+            android:gravity="center"
+            android:padding="@dimen/small_padding"
+            android:layout_margin="@dimen/small_padding"
+            android:layout_width="50dp"
+            android:background="@drawable/rounded_rectangle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            android:textSize="@dimen/medium_text" />
+
+        <TextView
+            android:id="@+id/m1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="1m"
+            android:gravity="center"
+            android:padding="@dimen/small_padding"
+            android:layout_margin="@dimen/small_padding"
+            android:layout_width="50dp"
+            android:background="@drawable/rounded_rectangle"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/d7"
+            android:textSize="@dimen/medium_text" />
+
+        <TextView
+            android:id="@+id/m3"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="3m"
+            android:gravity="center"
+            android:padding="@dimen/small_padding"
+            android:layout_margin="@dimen/small_padding"
+            android:layout_width="50dp"
+            android:background="@drawable/rounded_rectangle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/m1"
+            android:textSize="@dimen/medium_text" />
+
+        <TextView
+            android:id="@+id/m6"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="6m"
+            android:gravity="center"
+            android:padding="@dimen/small_padding"
+            android:layout_margin="@dimen/small_padding"
+            android:layout_width="50dp"
+            android:background="@drawable/rounded_rectangle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/m3"
+            android:textSize="@dimen/medium_text" />
+
+            <TextView
+                android:id="@+id/y1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="Y"
+                android:gravity="center"
+                android:padding="@dimen/small_padding"
+                android:layout_margin="@dimen/small_padding"
+                android:layout_width="50dp"
+                android:background="@drawable/rounded_rectangle"
+                android:textSize="@dimen/medium_text"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/m6" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.highsoft.highcharts.core.HIChartView
         android:id="@+id/chart_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="36dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/small_padding"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/price_stat" />
+        app:layout_constraintTop_toBottomOf="@+id/interval_selector" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
