--- a/app/src/main/res/drawable/rounded_rectangle.xml
+++ b/app/src/main/res/drawable/rounded_rectangle.xml
@@ -4,10 +4,12 @@
     <solid
         android:color="@color/medium" />
     <corners
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp" />
+        android:topLeftRadius="@dimen/corner_radius"
+        android:topRightRadius="@dimen/corner_radius"
+        android:bottomLeftRadius="@dimen/corner_radius"
+        android:bottomRightRadius="@dimen/corner_radius"/>
     <stroke
-        android:color="@android:color/transparent"
-        android:width="10dp" />
+        android:color="@color/light"
+        android:width="1dp" />
 
 </shape>
