--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,7 +12,7 @@
             android:id="@+id/rv_headers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/dark"
+            android:background="@color/medium"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             android:layout_marginTop="10dp"
@@ -72,7 +72,7 @@
                     android:maxLines="1"
                     android:padding="3dp"
                     android:textAlignment="viewEnd"
-                    android:text="24hr change"
+                    android:text="%24hr"
                     android:textSize="10sp" />
             </LinearLayout>
 
@@ -100,7 +100,7 @@
                     android:maxLines="1"
                     android:padding="3dp"
                     android:textAlignment="viewEnd"
-                    android:text="Change from ATH"
+                    android:text="% down"
                     android:textSize="10sp" />
             </LinearLayout>
 
