--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="small_text">11sp</dimen>
+    <dimen name="medium_text">14sp</dimen>
+    <dimen name="big_text">16sp</dimen>
+    <dimen name="corner_radius">15dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="small_padding">3dp</dimen>
+    <dimen name="medium_padding">12dp</dimen>
+    <dimen name="big_padding">24dp</dimen>
 </resources>
